# darim

./: .gitignore  LICENSE  README.md  docker-compose.yml
api-gateway/: Cargo.toml  Dockerfile  README.md
api-gateway/src/: main.rs
api-gateway/src/models/: auth.rs  error.rs  post.rs  user.rs
api-gateway/src/routes/: auth.rs  post.rs  user.rs
api-gateway/src/utils/: env_util.rs  http_util.rs  meta_util.rs  session_util.rs
client/: .eslintrc  .gitignore  Cargo.toml  Makefile.toml  README.md  bsconfig.json  index.html  package-lock.json  package.json  tsconfig.json
client/public/: index.css  index.html  index.js
client/public/static/: privacy.html  privacy.md  privacy_en.md  privacy_ko.md  terms.md  terms_en.md  terms_ko.md
client/reasonml/: .gitignore  package-lock.json
client/reasonml/public/: index.html  manifest.json
client/reasonml/src/api/: PostApi.re
client/reasonml/src/components/: Button.re  TextField.re
client/reasonml/src/pages/: App.re
client/reasonml/src/pages/auth/: Join.re
client/reasonml/src/pages/post/: Post.re
client/reasonml/src/pages/timeline/: Item.re  TimelineHeader.re
client/src/: api.rs  constants.ts  index.tsx  lib.rs  types.d.ts
client/src/api/: Api.re  AuthApi.re  auth.ts  post.ts  user.ts
client/src/components/: Button.tsx  Checkbox.tsx  Container.tsx  Footer.tsx  Header.re  Header.tsx  SecretKeyWarningBar.tsx  Section.re  Section.tsx  Tab.tsx  TextField.tsx  editor_component.rs  footer_component.rs  header_component.rs  index.ts  post_component.rs
client/src/models/: ActiveUserSession.ts  Post.ts  PostModel.re  Session.ts  SummarizedPost.ts  User.ts  ViewMode.ts  index.ts
client/src/pages/: App.tsx  api.ts
client/src/pages/auth/: Join.tsx  Login.re  Login.tsx  PasswordReset.tsx  Token.tsx  Verification.tsx  api.ts  index.ts
client/src/pages/auth/static/: terms.html
client/src/pages/landing/: JoinForm.tsx  Landing.tsx  LoginForm.tsx
client/src/pages/post/: Post.tsx  Preview.tsx  api.ts
client/src/pages/settings/: ProfileSettings.tsx  SecuritySettings.tsx  Settings.tsx
client/src/pages/static/: Static.tsx  index.ts
client/src/pages/timeline/: Calendar.tsx  CalendarItem.tsx  Item.tsx  List.re  List.tsx  ListItem.tsx  Timeline.re  Timeline.tsx  TimelineHeader.tsx  api.ts
client/src/utils/: Http.re  http.ts  i18n.ts  secret.ts  status.ts  storage.ts
client/tools/: define.ts  esbuild.build.ts  esbuild.serve.ts
client/typescript/: .eslintrc  .gitignore  package-lock.json  package.json
client/typescript/public/: index.html
client/typescript/src/: constants.ts  index.tsx
client/typescript/src/api/: auth.ts  post.ts  user.ts
client/typescript/src/components/: Button.tsx  Container.tsx  Header.tsx  LoadingDots.tsx  Section.tsx  index.ts
client/typescript/src/models/: Session.ts
client/typescript/src/pages/: App.tsx  api.ts
client/typescript/src/pages/auth/: Join.tsx  Login.tsx  PasswordReset.tsx  Token.tsx  api.ts  (+1 more)
client/typescript/src/utils/: http.ts  i18n.ts  secret.ts  status.ts
server/: Cargo.toml  Dockerfile  README.md
server/migrations/2020-04-04-115803_create_users/: up.sql
server/migrations/2020-04-05-103805_create_posts/: up.sql
server/migrations/2020-04-18-115803_create_users/: up.sql
server/migrations/2020-04-25-031209_alter_posts/: down.sql  up.sql
server/migrations/2020-06-27-045154_create_user_keys/: down.sql  up.sql
server/src/: lib.rs  macros.rs  main.rs  schema.rs
server/src/models/: auth.rs  connection.rs  db_connection.rs  error.rs  post.rs  user.rs  user_key.rs
server/src/models/auth/: jwt_claims.rs  jwt_refresh.rs  password_token.rs  sign_up_token.rs
server/src/routes/: auth.rs  post.rs  user.rs
server/src/routes/auth/: mod.rs  models.rs
server/src/routes/post/: mod.rs  models.rs
server/src/routes/user/: mod.rs  models.rs
server/src/services/: auth.rs  post.rs  user.rs
server/src/services/auth/: jwt_refresh.rs  password.rs  password_token.rs  sign_up_token.rs  user_session.rs
server/src/utils/: argon2_password_util.rs  email_util.rs  env_util.rs  http_util.rs  password_util.rs  scrypt_password_util.rs  session_util.rs
(+23 files in other folders)
