[package]
name = "darim-api-gateway"
version = "0.1.0"
authors = ["parksb <parkgds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^3.0", features = ["rustls"] }
actix-cors = "^0.5"
actix-session = "^0.4"
actix-rt = "^1.0"
reqwest = { version = "^0.10", features = ["json"] }
http = "^0.2"
time = "^0.2"
dotenv = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rustls = "^0.18"
chrono = { version = "^0.4", features = ["serde"] }
thiserror = "^1.0"
