[package]
name = "darim-api-gateway"
version = "0.1.0"
authors = ["parksb <parkgds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^3.0" }
actix-cors = "^0.5"
actix-rt = "^1.0"
actix-ratelimit = "0.3.1"
reqwest = { version = "^0.10", features = ["json"] }
http = "^0.2"
time = "^0.2"
dotenv = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
thiserror = "^1.0"
jsonwebtoken = "^7.2"
lazy_static = "1.4.0"
