[package]
name = "patic"
version = "0.1.0"
authors = ["ParkSB <parkgds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.6"
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
opt-level = 'z'
