[package]
name = "darim"
version = "0.1.0"
authors = ["ParkSB <parkgds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^2.0"
actix-cors = "^0.2"
actix-session = "^0.3"
actix-rt = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
dotenv = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
diesel = { version = "^1.4", features = ["mysql", "chrono"]}
thiserror = "^1.0"
scrypt = { version = "^0.3" }
redis = "^0.16.0"
rand = "^0.7.3"
cfg-if = "^0.1.10"
lettre = "^0.9"
lettre_email = "^0.9"
