[package]
name = "darim-server"
version = "0.1.0"
authors = ["parksb <parkgds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^3.0", features = ["rustls"] }
chrono = { version = "^0.4", features = ["serde"] }
dotenv = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
diesel = { version = "^1.4", features = ["mysql", "chrono"]}
thiserror = "^1.0"
scrypt = { version = "^0.3" }
redis = "^0.16.0"
rand = "^0.7.3"
cfg-if = "^0.1.10"
lettre = "0.10.0-alpha.2"
mockall = "^0.8"
time = "^0.2"
reqwest = { version = "^0.10", features = ["json"] }
funty = "=1.1.0"
