[package]
name = "darim-server"
version = "0.1.0"
authors = ["parksb <parkgds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = { version = "^4.3", features = ["rustls"] }
chrono = { version = "^0.4", features = ["serde"] }
dotenv = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
diesel = { version = "^1.4.8", features = ["mysql", "chrono", "r2d2"] }
thiserror = "^1.0"
scrypt = { version = "^0.3" }
rust-argon2 = "^0.8"
redis = { version = "^0.23.0", features = ["r2d2"] }
r2d2 = "^0.8.9"
rand = "^0.7.3"
cfg-if = "^0.1.10"
mockall = "^0.8"
time = "^0.2"
reqwest = { version = "^0.11", features = ["json", "multipart"] }
funty = "=1.1.0"
jsonwebtoken = "^7.2"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }
mailjet-rs = "0.3.0"
